优化查询不到数据的情况

--- a/search.html
+++ b/search.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
 
-    <title>遗言</title>
+    <title>遗嘱-查询</title>
     <link rel="stylesheet" href="lib/bootstrap-4.0.0-dist/css/bootstrap.min.css">
     <script type="text/javascript" src="lib/three.min.js"></script>
     <style>
